@@ -2,6 +2,12 @@
 
 	* src/client-c.xcb:
 	* src/xcb.h.m4:
+	XCB headers are now compatible with C++ source.
+
+2004-07-02  Jamey Sharp  <jamey@minilop.net>
+
+	* src/client-c.xcb:
+	* src/xcb.h.m4:
 	Keith's fix for padding didn't quite work, despite
 	looking quite sensible at the time. Replaced
 	XCB_TYPE_CEIL with XCB_TYPE_PAD and made all the
